--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your App Title</title>
+    <title>Athan Player</title>
 
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ url_for('static', filename='apple-touch-icon-57x57.png') }}">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ url_for('static', filename='apple-touch-icon-114x114.png') }}">
