--- a/templates/index.html
+++ b/templates/index.html
@@ -344,8 +344,10 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
+                <div style="height: 50px;"></div>
                 Reload the page after about 5 minutes to see uploaded Athans.
                 You can safely close the application now.
+                <div style="height: 50px;"></div>
             </div>
             <div class="modal-footer text-center">
                 <button type="button" class="btn btn-secondary modal-btn" data-bs-dismiss="modal">OK</button>
