--- a/templates/index.html
+++ b/templates/index.html
@@ -182,6 +182,8 @@
                 <li class="list-group-item"><strong>Asr:</strong> {{ prayer_times['asr_12hr'] }}</li>
                 <li class="list-group-item"><strong>Maghrib:</strong> {{ prayer_times['maghreb_12hr'] }}</li>
                 <li class="list-group-item"><strong>Isha:</strong> {{ prayer_times['icha_12hr'] }}</li>
+                <!-- Button to open the modal -->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mosqueModal">Choose Mosque</button>
             </ul>
         </div>
 
@@ -381,6 +383,31 @@
     </div>
 </div>
 
+<!-- Mosque Selection Modal -->
+<div class="modal fade" id="mosqueModal" tabindex="-1" role="dialog" aria-labelledby="mosqueModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="mosqueModalLabel">Enter Mosque URL</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="mosqueForm">
+                    <div class="form-group">
+                        <label for="mosqueUrl">Mosque URL</label>
+                        <input type="text" class="form-control" id="mosqueUrl" placeholder="https://mawaqit.net/en/m/mosque-name">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" id="saveMosqueUrl">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- JavaScript -->
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
