--- a/templates/index.html
+++ b/templates/index.html
@@ -390,8 +390,6 @@
             <div class="modal-header">
                 <h5 class="modal-title" id="mosqueModalLabel">Enter Mosque URL</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    <span aria-hidden="true">&times;</span>
-                </button>
             </div>
             <div class="modal-body">
                 <form id="mosqueForm">
@@ -402,12 +400,13 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary" id="saveMosqueUrl">Save changes</button>
             </div>
         </div>
     </div>
 </div>
+
 
 <!-- JavaScript -->
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
