--- a/templates/index.html
+++ b/templates/index.html
@@ -450,7 +450,7 @@
             box.value = data.volume;
         });
 
-        // choose mosque
+        // Choose mosque
         document.getElementById('saveMosqueUrl').addEventListener('click', function () {
             const mosqueUrl = document.getElementById('mosqueUrl').value;
             fetch('/update-mosque', {
@@ -464,13 +464,14 @@
             .then(data => {
                 if (data.success) {
                     alert('Mosque updated successfully!');
-                    // Reload the prayer times section without refreshing the entire page
-                    location.reload();
+                    // Reload the entire page to fetch and display updated prayer times
+                    location.reload();  
                 } else {
                     alert('Error updating mosque!');
                 }
             });
         });
+
 
         // Fajr Athan Upload Button Click
         document.getElementById('downloadFajrBtn').addEventListener('click', function() {
