--- a/templates/index.html
+++ b/templates/index.html
@@ -183,7 +183,8 @@
                 <li class="list-group-item"><strong>Maghrib:</strong> {{ prayer_times['maghreb_12hr'] }}</li>
                 <li class="list-group-item"><strong>Isha:</strong> {{ prayer_times['icha_12hr'] }}</li>
                 <!-- Button to open the modal -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#mosqueModal">Choose Mosque</button>
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#mosqueModal" style="margin-top: 20px;">Choose Mosque</button>
+
             </ul>
         </div>
 
