--- a/templates/index.html
+++ b/templates/index.html
@@ -652,6 +652,11 @@
             });
         });
 
+        // Initialize Bootstrap Select
+        $(document).ready(function() {
+            $('.selectpicker').selectpicker();
+        });
+
     </script>
 
     <!-- Bootstrap JS -->
