--- a/templates/index.html
+++ b/templates/index.html
@@ -35,9 +35,6 @@
     <!-- Bootstrap Select CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/css/bootstrap-select.min.css">
     
-    <!-- Bootstrap Select JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
-
     <style>
         body {
             background-color: #f8f9fa;
@@ -424,6 +421,7 @@
 
 <!-- JavaScript -->
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
+    
     <script>
         
         // Sync slider and input box
@@ -668,6 +666,9 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Bootstrap Select JavaScript (load after Bootstrap JS) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
 
 </body>
 
