--- a/templates/index.html
+++ b/templates/index.html
@@ -670,6 +670,8 @@
     <!-- Bootstrap Select JavaScript (load after Bootstrap JS) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </body>
 
 </html>
