--- a/templates/index.html
+++ b/templates/index.html
@@ -234,7 +234,8 @@
                     </select>
                     <button type="button" class="btn btn-secondary add-btn" data-bs-toggle="modal" data-bs-target="#uploadRegularModal">Add</button>
                 </div>
-        
+                
+                <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#iqamaSettingsModal">Iqama Settings</button>
                 <button type="submit" name="save_changes" class="btn btn-primary">Save Changes</button>
             </form>
         </div>
@@ -413,6 +414,46 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary" id="saveMosqueUrl">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Iqama Settings Modal -->
+<div class="modal fade" id="iqamaSettingsModal" tabindex="-1" aria-labelledby="iqamaSettingsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="iqamaSettingsModalLabel">Iqama Settings</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="iqamaSettingsForm" method="POST">
+                    {% for prayer in ['Fajr', 'Dhuhr', 'Asr', 'Maghrib', 'Isha'] %}
+                    <div class="form-group mb-3">
+                        <h6>{{ prayer }} Iqama</h6>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label>Time After Athan (minutes)</label>
+                                <input type="number" name="{{ prayer.lower() }}_delay" class="form-control" min="0" placeholder="Enter minutes after athan">
+                            </div>
+                            <div class="col-md-6">
+                                <label>Specific Time</label>
+                                <input type="time" name="{{ prayer.lower() }}_manual_time" class="form-control" placeholder="Enter specific time">
+                            </div>
+                        </div>
+                        <div class="form-check mt-2">
+                            <input class="form-check-input" type="radio" name="{{ prayer.lower() }}_option" value="delay" checked>
+                            <label class="form-check-label">Use Delay</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="{{ prayer.lower() }}_option" value="manual">
+                            <label class="form-check-label">Use Specific Time</label>
+                        </div>
+                    </div>
+                    {% endfor %}
+                    <button type="submit" class="btn btn-primary">Save Settings</button>
+                </form>
             </div>
         </div>
     </div>
