--- a/templates/index.html
+++ b/templates/index.html
@@ -504,8 +504,20 @@
 
 
 <!-- JavaScript -->
+
+    <!-- jQuery (load before any JavaScript that depends on it) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    
+    <!-- Socket.io -->
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
     
+    <!-- Bootstrap JS (after jQuery) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <!-- Bootstrap Select JavaScript (load after Bootstrap JS) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
+
+        
     <script>
         
         // Sync slider and input box
@@ -792,13 +804,6 @@
 
     </script>
         
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Bootstrap Select JavaScript (load after Bootstrap JS) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
 
 
 </body>
