--- a/templates/index.html
+++ b/templates/index.html
@@ -234,6 +234,18 @@
                     </select>
                     <button type="button" class="btn btn-secondary add-btn" data-bs-toggle="modal" data-bs-target="#uploadRegularModal">Add</button>
                 </div>
+                <div class="form-row mb-3">
+                    <label for="iqama_audio" class="form-label">Iqama Audio:</label>
+                </div>
+                <div class="form-row">
+                    <button type="button" class="btn btn-danger remove-btn" data-bs-toggle="modal" data-bs-target="#confirmRemoveModal" data-audio-type="iqama">Remove</button>
+                    <select name="iqama_audio" class="form-select">
+                        {% for file in iqama_files %}
+                        <option value="{{ file }}" {% if selected_iqama == file %}selected{% endif %}>{{ file }}</option>
+                        {% endfor %}
+                    </select>
+                    <button type="button" class="btn btn-secondary add-btn" data-bs-toggle="modal" data-bs-target="#uploadIqamaModal">Add</button>
+                </div>
                 
                 <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#iqamaSettingsModal">Iqama Settings</button>
                 <button type="submit" name="save_changes" class="btn btn-primary">Save Changes</button>
