--- a/templates/index.html
+++ b/templates/index.html
@@ -379,7 +379,7 @@
 </div>
 
 <!-- Confirm Remove Modal -->
-<div class="modal fade" id="confirmRemoveModal" tabindex="-1" aria-labelledby="confirmRemoveModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="confirmRemoveModal" tabindex="-1" aria-labelledby="confirmRemoveModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -475,7 +475,7 @@
 
 
 <!-- Upload Iqama Audio Modal -->
-<div class="modal fade" id="uploadIqamaModal" tabindex="-1" aria-labelledby="uploadIqamaModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="uploadIqamaModal" tabindex="-1" aria-labelledby="uploadIqamaModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
