ui iqama settings

--- a/templates/index.html
+++ b/templates/index.html
@@ -433,7 +433,7 @@
 
 <!-- Iqama Settings Modal -->
 <div class="modal fade" id="iqamaSettingsModal" tabindex="-1" aria-labelledby="iqamaSettingsModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="iqamaSettingsModalLabel">Iqama Settings</h5>
@@ -476,6 +476,7 @@
         </div>
     </div>
 </div>
+
 
 
 <!-- Upload Iqama Audio Modal -->
